Fix header button alignment

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -86,20 +86,24 @@ header {
     height: 50%; 
 }
 
+.register-button, .sign-in-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 35%; 
+    width: 25%;
+    border-radius: 5px;
+    font-family: var(--body-font);
+    text-align: center;
+    vertical-align: middle; 
+    cursor: pointer;
+    font-size: 100%;
+}
+
 .register-button {
     background-color: var(--supporting-color);
     color: white;
-    border-radius: 5px;
-    font-size: 16px;
-    font-family: var(--body-font);
     border: 1px solid var(--supporting-color);
-    text-align: center;
-    display: inline-block; 
-    vertical-align: middle; 
-    cursor: pointer;
-    height: 35%;
-    width: 25%;
-    font-size: 100%;
 }
 
 .register-button:hover {
@@ -109,16 +113,7 @@ header {
 .sign-in-button {
     background-color: var(--secondary-color);
     color: black;
-    border-radius: 5px;
-    font-size: 16px;
-    font-family: var(--body-font);
     border: 1px solid var(--primary-color);
-    text-align: center;
-    display: inline-block; 
-    vertical-align: middle; 
-    cursor: pointer;
-    height: 35%;
-    width: 25%;
 }
 
 .sign-in-button:hover {
